# blake2signer

./: .darglint  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pydocstyle  .pylintrc  .readthedocs.requirements.txt  .readthedocs.yaml  .style.yapf  CHANGELOG.rst  CONTRIB.md  README.md  fuzz.py  minisign.pub  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  tasks.py  test_fuzz.py
blake2signer/: __init__.py  bases.py  compressors.py  encoders.py  errors.py  interfaces.py  mixins.py  serializers.py  signers.py  utils.py
blake2signer/hashers/: __init__.py  blake3_package.py  blakehashers.py
blake2signer/tests/: bases.py  test_hashers.py  test_serializers.py  test_serializersigner.py  test_signer.py  test_signers.py  test_timestampsigner.py  test_utils.py
changelog.d/: 20201007_203544_hackan.rst  20201008_014325_hackan_high_level.rst  20201008_222755_hackan_exceptions.rst  20201009_181831_hackan_refactor.rst  20201009_201050_hackan_compression.rst  20201009_204243_hackan_compression.rst  20201107_214414_hackan.rst  20201108_132659_hackan.rst  20210226_204251_hackan_upgrade.rst  20210226_205141_hackan_upgrade.rst  20210411_234135_hackan.rst  20210411_234817_hackan.rst  20210411_235456_hackan.rst  20210412_000919_hackan.rst  20210412_003048_hackan.rst  20210414_010005_hackan.rst  20210414_014252_hackan.rst  20210414_205717_hackan.rst  20210414_212139_hackan.rst  20210415_004501_hackan.rst  20210415_020619_hackan.rst  20210416_103624_hackan.rst  20210416_103914_hackan.rst  20210416_104422_hackan.rst  20210416_104551_hackan.rst  20210416_105827_hackan.rst  20210416_194605_hackan.rst  20210418_011022_hackan.rst  20210419_172248_hackan.rst  20210419_185258_hackan.rst  20210422_013610_hackan.rst  20210422_014502_hackan.rst  20210423_172017_hackan.rst  20210423_190550_hackan.rst  20210426_161532_hackan.rst  20210502_190840_hackan_docs.rst  20210502_200846_hackan_docs.rst  20210505_024241_hackan_split_sigs.rst  20210510_205741_hackan.rst  20210515_161228_hackan.rst  (+41 more)
docs/: bases.md  changelog.md  comparison.md  compressors.md  contrib.md  details.md  encoders.md  errors.md  examples.md  faq.md  index.md  inspirations.md  mkdocs.yml  performance.md  pyproject.toml  readthedocs.requirements.txt  security.md  signers.md  upgrade.md  utils.md
docs/docs/: changelog.md  comparison.md  contrib.md  details.md  errors.md  examples.md  faq.md  hashers.md  index.md  inspirations.md  interfaces.md  mixins.md  performance.md  security.md  serializers.md  signatures.md  upgrade.md
docs/src/: fastapi_signed_api_keys_v2.py  fastapi_signed_api_keys_v3.py
scripts/: fuzz.py  test_fuzz.py
tests/: __init__.py  test_no_blake3.py
